assignment1/assignment/test_files/syntax_errors/illegal_type_declaration.java
public class Factorial{
    public static void main(String[] a){
        System.out.println(new Fac().ComputeFac(10));
    }
}

class Element {
    public boolean Init(){
        int int;
        return true;
    }

}
